# utility

./: .clang-format  CMakeLists.txt  allocator.c  allocator.h  bits.c  bits.h  bitwise.c  bitwise.h  checksum.c  checksum.h  kalman.hpp  manager.h  matrix.hpp  pid.hpp  quaternion3d.hpp  rotation3d.hpp  sfo.hpp  sfr.hpp  stack_matrix.hpp  state_observer.hpp  state_regulator.hpp  utility.c  utility.h  utility.hpp  vector3d.hpp
